Add endpoint with list of scopes
